# tcldide

./: .gitattributes  .gitignore  .npmrc  CMakeLists.txt  Makefile  README.md  index.html  package.json  setup.sh  test.html  vite.config.ts
custom/: README
demos/addition/: index.html  main.ts
demos/tk-entry/: index.html  main.ts
demos/tk-hello/: main.ts
demos/widget-gallery/: index.html  main.ts  widget_gallery.tcl
docs/: api.md  patch.md
examples/addition/: index.html
examples/tk-entry/: index.html
examples/tk-hello/: index.html
examples/widget-gallery/: index.html
js/: postJs.js  preJs.js  preJsRequire.js
opt/: tcldide.c  tcldide.h
runtime/: CMakeLists.txt  pre-env.js  tcl-poll.c  tcldide-runtime.c  wacl-tk-runtime.c
scripts/: xft-config
src/: errors.ts  tcldide.ts
src/runtime/: asyncify-queue.ts  canvas.ts  eval.ts  event-pump.ts  globals.ts  launch-base.ts  launch-tk.ts  launch.ts
